test/types/type_variables/deitz/test_infer_class1.good
Error: Unresolved call 'C(f=:int)' (test_infer_class1.chpl:6)
Candidates are:
  C(type t, f: t) (test_infer_class1.chpl:1)
