test/types/type_variables/deitz/test_infer_class1.chpl
class C {
  type t;
  var f : t;
}

var c = C(f = 1);

writeln(c);
